--- a/about.tex
+++ b/about.tex
@@ -82,3 +82,9 @@ This book will probably cover the following material:
   \item Ethical and legal issues in data science.
   \item Privacy-preserving computational approaches.
 \end{itemize}
+
+Note that, in this book, I openly express my opinions and beliefs. Many times it might sound
+controvertial.  I am not trying to be rude or to demean any researcher or practitioner in the
+field.  I am just trying to be honest and transparent.
+
+\emph{I'd rather be bold and straightforward than cower about my beliefs.}
