--- a/data.tex
+++ b/data.tex
@@ -121,7 +121,7 @@ emphasize the ``science'' aspect of it.  From these thoughts, let us define the 
 
 I want to highlight the meaning of some terms in this definition.  \emph{Computational methods} means
 that data science methods use computers to handle data and perform the calculations.
-\emph{Knowledge} means information that humans can easily understand or apply to solve
+\emph{Knowledge} means information that humans can easily understand and/or apply to solve
 problems.  \emph{Measurable phenomena} are events or processes where raw data can be
 quantified in some way\footnote{%
   Nonmeasurable phenomena are related to metaphysics and are not the object of study in
@@ -228,6 +228,8 @@ to understand data science as a new science.
 % \end{slidebox}
 
 \section{The data science continuum}
+
+% TODO documentation and communication
 
 In the previous section, I argued that data science is a new science defining its object
 of study.  This is just the first step to establish a new science, especially because the
