--- a/main.tex
+++ b/main.tex
@@ -293,7 +293,6 @@ visit
 
 \mainmatter
 \input{history}
-\input{preliminaries}
 \input{data}
 \input{project}
 \input{inductive}
@@ -302,6 +301,10 @@ visit
 \input{evaluation}
 \input{planning}
 \input{ethics}
+
+% start appendix
+\appendix
+\input{preliminaries}
 
 \printbibliography
 \printglossary
