--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,16 +1,16 @@
-\chapter{Preliminaries}
+\chapter{Fundamental concepts}
 \label{chap:preliminaries}
 
 \chapterprecishere{%
   Maar ik maak steeds wat ik nog niet kan om het te leeren kunnen.\par\raggedleft---
   \textup{Vincent van Gogh}, The Complete Letters of Vincent Van Gogh, Volume Three}
 
-Foundamental concepts in data science come from a variety of fields, including
+Fundamental concepts in data science come from a variety of fields, including
 mathematics, statistics, computer science, optimization theory, and information theory.
 This chapter provides a brief overview of the main computational, mathematical and statistical
 concepts in data science.
 
-The goal is not to provide a comprehensive treatment of these topics, but to consolidate
+My goal is not to provide a comprehensive treatment of these topics, but to consolidate
 notations and definitions that are used throughout the book.  The reader is encouraged to
 consult the references provided at the end of each topic for a more in-depth treatment.
 Statisticians with strong programming background and computer scientists with strong
@@ -22,8 +22,8 @@ theory and linear algebra, which are important mathematical foundations for data
 Finally, I introduce the main concepts in probability theory, the cornerstone of
 statistical learning and inference.
 
-If your are familiar with these topics, you can safely skip this chapter.  Otherwise, I
-encourage you to read it carefully, as it will help you understand the rest of the book.
+If your are familiar with these topics, you can safely skip this annex.  Otherwise, I
+encourage you to read it and the references provided at each topic.
 
 \begin{mainbox}{Chapter remarks}
 
