--- a/history.tex
+++ b/history.tex
@@ -17,7 +17,9 @@ figures in the history of data science: Peter Naur and William Cleveland.
 
 Moreover, studying the main facts and figures in the history of data-driven sciences
 enables us to understand the evolution of the field and hopefully to guide us to evolve it
-further.  Most of the important theories and methods in data science have been developed
+further.  Besides, history also teaches us ways to avoid repeating the same mistakes.
+
+Most of the important theories and methods in data science have been developed
 simultaneously in different fields, such as statistics, computer science, and engineering.
 The history of data-driven sciences is long and rich. I present a timeline of the ages of
 data handling and the most important markers of data analysis.
