Added contribution notes.

--- a/project.tex
+++ b/project.tex
@@ -3,8 +3,9 @@
 
 % %TODO: do not forget to talk about doucmentation and deployment
 
-\chapterprecishere{Figured I could throw myself a pity party or go back to school and
-learn the computers. \par\raggedleft--- \textup{Don Carlton}, Monsters University (2013)}
+\chapterprecishere{\raggedleft\textup{with contributions from} \textsc{Johnny C. Marques}
+  \\[5mm] Figured I could throw myself a pity party or go back to school and learn the computers.
+  \par\raggedleft--- \textup{Don Carlton}, Monsters University (2013)}
 
 First of all, a data science project is a software project.  The difference between a data
 science software and a traditional software is that some components of the former is
