Fixed hyperref problem for appendix.

--- a/main.tex
+++ b/main.tex
@@ -302,7 +302,7 @@ visit
 \input{planning}
 \input{ethics}
 
-% start appendix
+\renewcommand{\theHchapter}{A\arabic{chapter}} % workaround for hyperref
 \appendix
 \input{preliminaries}
 
