--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1119,7 +1119,11 @@ combinatorics. Combinatorics is the branch of mathematics that studies the count
 objects.
 
 \paragraph{Factorial}  The factorial of a non-negative integer $n$ is the product of all
-positive integers up to $n$.  It is denoted by $n!$.  By definition, $0! = 1$.
+positive integers up to $n$.  It is denoted by
+\[
+  n! = n \cdot (n - 1) \cdot \text\dots \cdot 2 \cdot 1\text{.}
+\]
+By definition, $0! = 1$.
 
 \paragraph{Permutation}  A permutation is an arrangement of a set of elements.  The
 number of permutations of $n$ elements is $n!$.  Permutations are used in combinatorics
