--- a/data.tex
+++ b/data.tex
@@ -115,8 +115,8 @@ Note that these definitions do not contradict each other.  But, they do not atte
 emphasize the ``science'' aspect of it.  From these thoughts, let us define the term.
 
 \begin{defbox}{Data science}{ds}
-  Data science is the study of computational methods to extract knowledge from
-  measurable phenomena.
+  Data science is the study of knowledge extraction from
+  measurable phenomena using computational methods.
 \end{defbox}
 
 I want to highlight the meaning of some terms in this definition.  \emph{Computational methods} means
@@ -181,7 +181,7 @@ into account, but we give data the opportunity to surprise us.
 
 Thus, while the objects of the study in conventional sciences are the phenomena themselves
 and the models that can explain them, the objects of the study in data
-science are the computational methods and processes that can extract reliable and ethical
+science are the means (computational methods and processes) that can extract reliable and ethical
 knowledge from data acquired from the phenomenon of interest.
 
 \def\verrids{(0,0) circle (20mm)}
@@ -217,15 +217,6 @@ knowledge from data acquired from the phenomenon of interest.
 \Cref{fig:myview} shows my view of data science.  Data science is an entire new science
 that incorporates concepts from other sciences.  In the next section, I argue the reasons
 to understand data science as a new science.
-
-% \begin{slidebox}{Data science vs conventional sciences}{}
-%   \begin{itemize}
-%     \item Conventional sciences are model-driven: observation, hypothesis, and validation.
-%     \item In data science, we extract the knowledge directly and primarily from the data.
-%     \item Data science studies the computational methods and processes that can extract
-%       reliable and ethical knowledge from huge amounts of data.
-%   \end{itemize}
-% \end{slidebox}
 
 \section{The data science continuum}
 
