Clearer long definition.

--- a/data.tex
+++ b/data.tex
@@ -182,7 +182,8 @@ into account, but we give data the opportunity to surprise us.
 Thus, while the objects of the study in conventional sciences are the phenomena themselves
 and the models that can explain them, the objects of the study in data
 science are the means (computational methods and processes) that can extract reliable and ethical
-knowledge from data acquired from the phenomenon of interest.
+knowledge from data acquired from any measurable phenomenon --- and, of course, their
+consequences.
 
 \def\verrids{(0,0) circle (20mm)}
 \def\verrist{(-2.5,0) circle (15mm)}
