--- a/main.tex
+++ b/main.tex
@@ -237,13 +237,13 @@
 \thispagestyle{empty}
 \begin{tikzpicture}[remember picture, overlay]
   \node[anchor=south east, inner sep=8mm] at (current page.south east) {%
-    \reflectbox{\includegraphics[height=0.6\paperheight]{images/toucan_bw.png}}%
+    \reflectbox{\includegraphics[height=0.3\paperheight]{images/toucan_bw.png}}%
   };
-  \node[anchor=south east, inner sep=10mm] at (current page.south east) {\large\sffamily\textcolor{black!60}\today};
+  \node[anchor=south west, inner sep=10mm] at (current page.south west) {\large\sffamily\textcolor{black!60}\today};
   \node[anchor=north, yshift=-25mm](title) at (current page.north) {\HUGE\sffamily\uppercase{Data science project}};
   \node[anchor=north, inner sep=5mm](subtitle) at (title.south) {\LARGE\sffamily\uppercase{an inductive learning approach}};
   \node[anchor=north, inner sep=5mm] at (subtitle.south) {\Large\sffamily\uppercase{Filipe A. N. Verri}};
-  \node[red,anchor=south west, inner sep=11mm] at (current page.south west) {\HUGE\sffamily WIP};
+  \node[red,anchor=south, inner sep=11mm] at (current page.south) {\HUGE\sffamily WIP};
 \end{tikzpicture}
 
 \newpage
