Working on chap 3 opening.

--- a/project.tex
+++ b/project.tex
@@ -7,18 +7,24 @@
   \\[5mm] Figured I could throw myself a pity party or go back to school and learn the computers.
   \par\raggedleft--- \textup{Don Carlton}, Monsters University (2013)}
 
-First of all, a data science project is a software project.  The difference between a data
+First of all, \emph{a data science project is a software project}.  The difference between a data
 science software and a traditional software is that some components of the former is
 constructed from data.  This means that part of the solution cannot be designed from the
-knowledge of the domain expert, but must be learned from the data.  (Alternatively, the
-cost of designing the solution is too high, and it is more efficient to learn it from the data.)
+knowledge of the domain expert, but must be extracted from the data.  Sometimes, a
+traditional solution would be too complex to design, and it is more efficient to infer it
+from the data.
 
-One good example of a data science project is a spam filter.  The spam filter is a software
-that classifies emails into two categories: spam and non-spam.  The software is trained
-using a set of emails that are already classified as spam or non-spam.  The software is
-then used to classify new emails.  The software is a data science software because the
-classification algorithm is learned from the data, i.e. the filters are not designed ``by
-hand''.
+One good example of project is a spam filter.  The spam filter is a software that
+classifies emails into two categories: spam and non-spam.  A traditional approach would be
+to design a set of filters that are known to be effective.  However, the effectiveness of
+the filters is limited by the knowledge of the designer and is cumbersome to maintain.  A
+data science approach is to design a software that learns the filters from the data,
+rather than from the knowledge of the designer.  The software is trained using a set of
+emails that are already classified as spam or non-spam.
+
+In this chapter, we discuss common methodologies for data science projects.  We also
+present the concept of agile methodologies and the SCRUM framework.  We finally propose an
+extension to SCRUM adapted for data science projects.
 
 % TODO:
 % - the need of methodologies for data science projects
@@ -39,13 +45,17 @@ hand''.
   \boxsubtitle{Context}
 
   \begin{itemize}
-    \item \dots
+    \item Data science project is a software project.
+    \item Data science methodologies focus on the data analysis process.
+    \item Industry demands not only data analysis but also software development.
   \end{itemize}
 
   \boxsubtitle{Objectives}
 
   \begin{itemize}
-    \item \dots
+    \item Explore the common methodologies for data science projects.
+    \item Understand the agile methodologies and the SCRUM framework.
+    \item Propose an extension to SCRUM adapted for data science projects.
   \end{itemize}
 
   \boxsubtitle{Takeways}
