--- a/history.tex
+++ b/history.tex
@@ -39,6 +39,7 @@ sometimes avoiding directions that are not relevant in the inductive learning co
   \boxsubtitle{Context}
 
   \begin{itemize}
+    \itemsep0em
     \item The term ``data science'' is recent and has been used to label rather different
       fields.
     \item The history of data-driven sciences is long and rich.
@@ -51,6 +52,7 @@ sometimes avoiding directions that are not relevant in the inductive learning co
   \boxsubtitle{Objectives}
 
   \begin{itemize}
+    \itemsep0em
     \item Understand the history of the term ``data science.''
     \item Understand the major milestones in the history of data-driven sciences.
     \item Identify important figures in the history of data-driven sciences.
@@ -59,6 +61,7 @@ sometimes avoiding directions that are not relevant in the inductive learning co
   \boxsubtitle{Takeways}
 
   \begin{itemize}
+    \itemsep0em
     \item We have evolved both in terms of theory and application of data-driven sciences.
     \item There is no consensus on the definition of data science (including which fields
       it encompasses).
@@ -404,6 +407,7 @@ The ubiquity of data generation and the evolution of data-centric technologies h
 made possible by a multitude of figures across various domains.
 
 \begin{itemize}
+  \itemsep0em
   \item Vinton Gray Cerf (born 1943) and Robert Elliot Kahn (born 1938), often referred to
     as the ``Fathers of the Internet,'' developed the TCP/IP protocols, which are
     fundamental to internet communication.
