--- a/main.tex
+++ b/main.tex
@@ -173,12 +173,14 @@
 
 \newtcolorbox{mainbox}[1]{
   float=ht,
-  spread downwards,
+  spread outwards=-2mm,
+  spread inwards=-2mm,
+  %spread downwards,
   colframe=black!20!white,
   fonttitle=\bfseries,
   base={#1},
-  left=20mm,
-  right=20mm,
+  left=16mm,
+  right=19mm,
 }
 
 \newtcolorbox{hlbox}[1]{
