--- a/project.tex
+++ b/project.tex
@@ -45,6 +45,7 @@ extension to SCRUM adapted for data science projects.
   \boxsubtitle{Context}
 
   \begin{itemize}
+    \itemsep0em
     \item Data science project is a software project.
     \item Data science methodologies focus on the data analysis process.
     \item Industry demands not only data analysis but also software development.
@@ -53,6 +54,7 @@ extension to SCRUM adapted for data science projects.
   \boxsubtitle{Objectives}
 
   \begin{itemize}
+    \itemsep0em
     \item Explore the common methodologies for data science projects.
     \item Understand the agile methodologies and the SCRUM framework.
     \item Propose an extension to SCRUM adapted for data science projects.
@@ -61,6 +63,7 @@ extension to SCRUM adapted for data science projects.
   \boxsubtitle{Takeways}
 
   \begin{itemize}
+    \itemsep0em
     \item \dots
   \end{itemize}
 \end{mainbox}
@@ -78,6 +81,7 @@ widely used today.
 
 CRISP-DM is a cyclic process.  The process is composed of six phases:
 \begin{enumerate}
+  \itemsep0em
   \item Business understanding: this is the phase where the project objectives are
     defined.  The objectives must be defined in a way that is measurable.  The phase also
     includes the definition of the project plan.
@@ -197,6 +201,7 @@ time, programming language, and the infrastructure to run the software.
 is possible at any stage of the process.  \Cref{fig:zumel} shows a diagram of the process.
 The phases are:
 \begin{itemize}
+  \itemsep0em
   \item Define the goal: what problem are we trying to solve?
   \item Collect and manage data: what information do we need?
   \item Build the model: find patterns in the data that may solve the problem.
@@ -249,6 +254,7 @@ must be completed before the next phase can begin.
 
 The four values of agile manifesto are:
 \begin{itemize}
+  \itemsep0em
   \item Individuals and interactions over processes and tools;
   \item Working software over comprehensive documentation;
   \item Customer collaboration over contract negotiation;
@@ -288,6 +294,7 @@ projects.  It lacks the exploratory phases of data science projects.
 Thus, we propose an extension to SCRUM that makes it suitable for data science projects.
 The extension is based on the following observations:
 \begin{itemize}
+  \itemsep0em
   \item Data science projects have exploratory phases;
   \item Data itself is a component of the solution;
   \item The solution is usually modularized, parts of it are constructed from data while the
@@ -298,6 +305,7 @@ The extension is based on the following observations:
 
 Moreover, we add two other values besides the agile manifesto values.  They are:
 \begin{itemize}
+  \itemsep0em
   \item Model confidence/understanding over model performance;
   \item Code version control over interactive environments.
 \end{itemize}
